refactor: rename job resource to release
